# cttg6.0

./: .gitignore  .travis.yml  CMakeLists.txt  NamingConventions.md  README.rst  README_DEV.rst  test.sh  travis_test.sh
benchmarks/DMFT/StatsCD/: hyb147.arma  params147.json  statsobs.json
benchmarks/DMFT/StatsPatrick/: Hyb198.json  params198.json  statsobs.json
benchmarks/Plaquette2x2/CD/U5_b10_tp_tpp/: Obs.json  ObsRank0.json  ObsRank1.json  ObsRank2.json  ObsRank3.json  greenDown.arma  greenDownRank2.arma  greenDownRank3.arma  greenUpRank0.arma  greenUpRank1.arma  hyb1.arma  hyb2.arma  hyb3.arma  hybFM.arma  hybNext.arma  params1.json  params2.json  params3.json  params4.json  runCDMFT.sh  self.arma  tloc.arma
benchmarks/Plaquette2x2/CD/n1_U3_b10/: Obs.json  ObsRank0.json  ObsRank1.json  ObsRank2.json  ObsRank3.json  greenDownRank0.arma  greenDownRank2.arma  greenDownRank3.arma  greenUp.arma  (+11 more)
benchmarks/Plaquette4x4/U5_b10/: Obs1.json  Obs2.json  Obs3.json  Obs4.json  logfile  params1.json  params2.json  params3.json  params4.json  params5.json  scriptMp2.pbs  test.o472427  upd.meas1.json  upd.meas2.json  upd.meas3.json  upd.meas4.json  upd.therm.json
benchmarks/Plaquette4x4/U7_b10/: Obs.json  Obs1.json  hybFM.arma  logfile  params1.json  params2.json  params3.json  scriptMp2.pbs  test.o472428  tloc.arma  upd.meas1.json  upd.meas2.json  upd.therm.json
benchmarks/Triangle/StatsCD/: hyb64.arma  params64.json  statsobs.json
benchmarks/Triangle/StatsPatrick/: Hyb71.json  Link.json  Self71.json  params71  script  statsobs.json
data/: 2x2triangle_cdmft.model
docs/: Makefile  conf.py  installation.rst  make.bat  params.rst  tutorial.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  intro.doctree  params.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  intro.html  objects.inv  params.html  search.html  searchindex.js  tutorial.html
docs/_build/latex/: cttg.aux  cttg.out  cttg.tex  cttg.toc
examples/CDMFT/: runCDMFT.sh
examples/Graham/: slurm.sh
examples/Home/: runCDMFT.sh
examples/Mp2/: scriptMp2.pbs
src/: cdmft_square2x2.cpp  cdmft_square2x2_aux.cpp  cdmft_square2x2_aux_sub.cpp  cdmft_square2x2_sub.cpp  cdmft_square4x4.cpp  cdmft_square4x4_aux.cpp  cdmft_square4x4_aux_sub.cpp  cdmft_square4x4_sub.cpp  cdmft_triangle2x2.cpp  cdmft_triangle2x2_aux.cpp  cdmft_triangle2x2_aux_sub.cpp  cdmft_triangle2x2_sub.cpp  cttg.cpp  cttg_DCA.cpp  cttg_afm.cpp  cttg_sub.cpp  cttg_sub_DCA.cpp  cttg_sub_afm.cpp  dmft.cpp  dmft_aux.cpp  dmft_aux_sub.cpp  dmft_sub.cpp
src/Includes/: PrintVersion.hpp
src/Includes/IS/: ABC_MarkovChain.hpp  ABC_MarkovChainSubMatrix.hpp  ABC_MarkovChain_Test.hpp  ABC_MonteCarlo.hpp  ISData.hpp  ISResult.hpp  MarkovChain.hpp  MarkovChainAux.hpp  MarkovChainAuxSubMatrix.hpp  MarkovChainSubMatrix.hpp  MonteCarlo.hpp  MonteCarloBuilder.hpp  MonteCarloBuilder_AFM.hpp  MonteCarloBuilder_DCA.hpp  MonteCarloSubMatrixBuilder.hpp  MonteCarloSubMatrixBuilder_AFM.hpp  MonteCarloSubMatrixBuilder_DCA.hpp  MonteCarlo_tmp.hpp
src/Includes/Models/: ABC_DCA_Model.hpp  ABC_H0.hpp  ABC_H0_DCA.hpp  ABC_Model.hpp  H0Square.hpp  H0Triangle.hpp  HybFMAndTLoc.hpp  ModelBuilder.hpp  ModelSquare2x2.hpp  ModelSquare2x2_AFM.hpp  ModelSquare2x2_afm.hpp  ModelSquare4x4.hpp  ModelSquare4x4_DCA.hpp  ModelSquare6x6.hpp  ModelSquare8x8.hpp  ModelTriangle2x2.hpp  ModelTriangle3x2_DCA.hpp  ModelTriangle4x4_DCA.hpp  SIAM_Square.hpp  SIAM_Triangle.hpp
src/Includes/Utilities/: ABC_SelfConsistency.hpp  Cache.hpp  Conventions.cpp  Conventions.hpp  FS.hpp  Fit.hpp  Fourier.hpp  Fourier_DCA.hpp  GreenMat.hpp  GreenTau.hpp  GreenTau_Newer.hpp  IO.hpp  IOConstruct.hpp  Integrator.hpp  LinAlg.hpp  LinAlg_tmp.hpp  Logging.hpp  MPIUtilities.hpp  Matrix.hpp  SelfConsistency.hpp  SelfConsistencyBuilder.hpp  SelfConsistencyBuilder_AFM.hpp  SelfConsistencyBuilder_DCA.hpp  SelfConsistency_DCA.hpp  SelfConsistency_DCA_Old.hpp  SymetrizeSpins_AFM.hpp  TransformSquare2x2.hpp  Utilities.hpp
src/Models_Maxime/: anisotropicplaquette2x2.model  anisotropicplaquette3x2.model  findGreenTool.py  getmodels_from_maxime.py  plaquette2x2.model  plaquette4x4.equivalentSites.txt  plaquette6x6.model
test/: FillingAndDoccTests.cpp  FourierTests.cpp  Fourier_DCATests.cpp  GreenBinningTests.cpp  GreenMatTests.cpp  GreenTauTests.cpp  H0TriangleTests.cpp  HybFMAndTLocTests.cpp  IntegratorTests.cpp  MarkovChainAuxSubMatrixTests.cpp  MarkovChainAuxTests.cpp  MarkovChainSquare2x2Tests.cpp  MarkovChainSubMatrixSquare2x2Tests.cpp  MarkovChainSubMatrixTests.cpp  MarkovChainTests.cpp  MatrixTests.cpp  ModelTriangle2x2Tests.cpp  ObservablesTests.cpp  SelfConsistencyTests.cpp  TestTools.hpp  UtilitiesTests.cpp  UtilitiesTests_Vers2.cpp  UtilitiesTests_tmp.cpp
test/Simulations/2x2Square_AFM/: params1.json  runCDMFT.sh
test/Simulations/2x2Square_n1_U7_b10/: params1.json  scriptMp2.pbs
test/Simulations/2x2Square_n1_U7_b10_DCA/: params1.json  scriptMp2.pbs  slurm.sh
test/Simulations/2x2Square_tp_tpp_beta50_U5/: params1.json
test/Simulations/2x2Triangle_AFM/: params1.json  scriptMp2.pbs  slurm.sh
test/Simulations/2x2Triangle_n099_tp04_U6.90_b12/: params1.json  runCDMFT.sh  scriptMp2.pbs  slurm.sh
test/Simulations/2x2_DCA/: params180.json  slurm.sh
test/Simulations/4x4Plaquette_tp_tpp_U5_b10/: params1.json  scriptMp2.pbs
test/Simulations/4x4_DCA/: params82.json  slurm.sh
test/Simulations/6x6Plaquette_tp_tpp_U2_b6/: params1.json  scriptMp2.pbs  slurm.sh
test/Simulations/8x8Plaquette_tp_tpp_U2_b6/: params1.json  slurm.sh
test/Simulations/DMFT_n085_b16.67_U14/: params1.json  runCDMFT.sh  scriptMp2.pbs
test/data/DMFT/: Obs_good.json  params100.json  params_obs110.json  test_dmft0.json  testselfconsistency.json
test/data/cdmft_square2x2/: params1.json
test/data/cdmft_triangle/: Obs_good.json  params_obs66.json  params_obs_binning5.json  testtriangle.json
tools/: 2x2K_To_R.cpp  2x2R_To_K.cpp  4x4K_To_R_DCA.cpp  CMakeLists.txt  GTauBetaOver2_DCA4x4.cpp  PATTOCD  PatToCD.cpp  compile.sh  compileMp2.sh  tau_to_mat.py
(+166 files in other folders)
